--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					</section>
 
 					<section data-background-image="https://cdn.pixabay.com/photo/2015/12/19/20/34/phone-1100260_960_720.jpg" data-background-opacity="0.5">
-						<h4><strong>Quais as diferências da pesquisa digital para a analógica?</strong></h4>
+						<h4><strong>Quais as diferenças da pesquisa digital para a analógica?</strong></h4>
 					</section>
 
 					<section>
@@ -102,6 +102,10 @@
 
 					<section>
 						<h3> <a href="https://archive.org/">Internet Archive</a> </h3>
+					</section>
+					
+					<section>
+						<h3> <a href="https://www.gutenberg.org/">Project Gutenberg</a> </h3>
 					</section>
 				</section>
 
