--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
 					<section>
 						<h3> <a href="https://www.gutenberg.org/">Project Gutenberg</a> </h3>
 					</section>
+
+                                        <section>
+						<h3> <a href="http://www.unilab.edu.br/linkssugeridos/"> Novos links da Biblioteca da Unilab</a> </h3>
+					</section>
 				</section>
 
 				<section data-transition="slide" data-background="#5d0000" data-background-transition="zoom">
