atualização index.html

--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1>Curso on-line</h1>
-					<h2>Unilab - IHL, Campus dos Malês</h2>
+					<h1>Levantamento bibliográfico</h1>
+					<h1>e gerenciamento de referências em meio digital</h1>
 				</section>
 
 				<section>
-					<h2>Levantamento bibliográfico e gerenciamento de referências em meio digital</h2>
-					<small>Prof <a href="https://ericbrasiln.github.io/">Eric Brasil</a></small>
-					<small>- Coordenador do Curso de Licenciatura em História, Unilab - IHL, Campus dos Malês</small>
+					<h2>Prof <a href="https://ericbrasiln.github.io/">Eric Brasil</a></h2>
+					<p>- Coordenador do Curso de Licenciatura em História, Unilab - IHL, Campus dos Malês</p>
 					<small>contato: profericbrasil@unilab.edu.br</small>
 				</section>
 
