atualização index.html

--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1>II Semana de História</h1>
-					<h2>Unilab - IHL, Campus dos Malês</h2>
-					<small>Minicurso - 27/11/2019, 9h-12h e 28/11/2019, 14h-17h</small>
+					<h1>Levantamento bibliográfico</h1>
+					<h1>e gerenciamento de referências em meio digital</h1>
 				</section>
 
 				<section>
-					<h2>Levantamento bibliográfico e gerenciamento de referências em meio digital</h2>
-					<small>Prof <a href="https://ericbrasiln.github.io/">Eric Brasil</a></small>
-					<small>- Coordenador do Curso de Licenciatura em História</small>
-					<small>contato: profericbrasil@unilab.ecu.br</small>
+					<h2>Prof <a href="https://ericbrasiln.github.io/">Eric Brasil</a></h2>
+					<p>- Coordenador do Curso de Licenciatura em História, Unilab - IHL, Campus dos Malês</p>
+					<small>contato: profericbrasil@unilab.edu.br</small>
 				</section>
 
 				<section>
