atualização index.html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1>Levantamento bibliográfico</h1>
-					<h1>e gerenciamento de referências em meio digital</h1>
+					<h2>Levantamento bibliográfico e gerenciamento de referências em meio digital</h2>
 				</section>
 
 				<section>
@@ -254,7 +253,7 @@
         </section>
 
 				<section data-transition="slide" data-background="#343018" data-background-transition="zoom">
-						<small> produzido a partir de <a href="http://hakim.se">Reveal.js</a></p>
+						<small> produzido a partir de <a href="http://hakim.se">Reveal.js</a></small>
 				</section>
       </div>
 			</div>
